minor edit of descriptions in intro and step 1

--- a/workflows/hiz/ouray_hiz.ipynb
+++ b/workflows/hiz/ouray_hiz.ipynb
@@ -7,23 +7,21 @@
    "source": [
     "# Ouray Defensible Space Analysis\n",
     "\n",
-    "Author: **Bryce A Young** | \n",
+    "Author: **Bryce A Young** (git bryceayoung) | \n",
     "Created: **2024-12-05** | \n",
-    "Modified: **2024-12-17**\n",
+    "Modified: **2025-02-06**\n",
     "\n",
     "In this notebook, we analyze fuel distributions within the defensible space of every building in Ouray County.\n",
     "\n",
-    "This analysis workflow also documents cleaning and preparing raw data for the analysis.\n",
+    "Documents for cleaning and preparing raw data for the analysis are located in this repo under `workflows/data_prep`.\n",
     "\n",
     "#### Data \n",
     "- (vector) Microsoft Building Footprints\n",
-    "- (raster) SILVIS Global WUI raster\n",
     "- (raster) LiDAR-derived rasters\n",
     "\n",
     "#### Workflow \n",
     "- Create HIZ boundaries around each building footprint\n",
     "- Count number of homes within each HIZ\n",
-    "- Obtain WUI class for each home\n",
     "- Get zonal summary values of each LiDAR-derived raster for each HIZ\n",
     "\n",
     "## Step 0: Setup Environment\n",
@@ -32,39 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1f366a42",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "### Directory ###\n",
-    "# Repository root\n",
-    "root = 'E:/_PROJECTS/Ouray_ParcelRisk/ouray'\n",
-    "\n",
-    "### Data paths ###\n",
-    "# Folder where all the data inputs and outputs will live\n",
-    "data = 'E:/_PROJECTS/Ouray_ParcelRisk/data'\n",
-    "# Folder for all SILVIS WUI files\n",
-    "silvis_wui = os.path.join(data, 'silvis_wui')\n",
-    "# Folder for microsoft building footprints\n",
-    "mbf = os.path.join(data, 'building_footprints')\n",
-    "# Folder containing LiDAR-derived rasters\n",
-    "tiffs_from_las = os.path.join(data, 'tiffs_from_las')\n",
-    "# Folder countaining the Ouray County boundary\n",
-    "county_boundary = os.path.join(data, 'county_boundary')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "id": "a05a1593",
+   "id": "1f366a42",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'E:\\\\_PROJECTS\\\\Ouray_ParcelRisk\\\\ouray'"
+       "'D:\\\\_PROJECTS\\\\P001_OurayParcel\\\\ouray'"
       ]
      },
      "execution_count": 2,
@@ -73,7 +46,22 @@
     }
    ],
    "source": [
-    "os.chdir(root)\n",
+    "import os\n",
+    "### Directory ###\n",
+    "# Repository\n",
+    "os.chdir(r'D:/_PROJECTS/P001_OurayParcel/ouray')\n",
+    "# Root workspace\n",
+    "ws = r'D:/_PROJECTS/P001_OurayParcel'\n",
+    "\n",
+    "### Data paths ###\n",
+    "# Folder where all the data inputs and outputs will live\n",
+    "data = os.path.join(ws, 'data')\n",
+    "# Folder for geoms (microsoft building footprints, parcels, and county boundary)\n",
+    "geoms = os.path.join(data, 'county_geoms')\n",
+    "# Folder containing LiDAR-derived rasters\n",
+    "rasters = os.path.join(data, 'tiffs_from_las')\n",
+    "\n",
+    "# Ensure correct working directory\n",
     "os.getcwd()"
    ]
   },
