see previous commit

--- a/workflows/hiz/ouray_hiz.ipynb
+++ b/workflows/hiz/ouray_hiz.ipynb
@@ -75,13 +75,13 @@
     "**Background: obtaining building footprints**  \n",
     "*I searched \"Ouray County Colorado Microsoft Building Footprints\" and found a Colorado state website that had parsed the Microsoft Building Footprints dataset into county datasets for all of Colorado. So I was able to directly download the Ouray footprints without having to do any data manipulation myself.*\n",
     "\n",
-    "*After downloading the footprints, I added them to ArcGIS Pro and viewed them on top of my LiDAR data. Especially the `zentropy` layer shows buildings very well. I noticed that the footprint geometries are offset from the location of the buildings in the LiDAR rasters. So I used 'rubber sheeting' in ArcGIS Pro to put control points and target points that were intended to bring the building footprints closer to the buildings in the LiDAR rasters.*\n",
+    "*After downloading the footprints, I added them to ArcGIS Pro and viewed them on top of my LiDAR data. Especially the `zentropy` layer shows buildings very well. I noticed that the footprint geometries are offset from the location of the buildings in the LiDAR rasters. So I used the 'Transform' tool in ArcGIS Pro 3.4.0 to put control points and target points (links) with Rubbersheet (natural neighbor) as the transformation method. This operation brought the building footprints closer to the buildings as they appear in the Z-entropy LiDAR raster. This created 105 anchor points througout the county extent where buildings are present.*\n",
     "\n",
-    "*The resulting shapefile was saved to `ouray_footprints_rs.shp` where 'rs' denotes 'rubber sheet' transformation of the original footprint layer. Original footprints are saved in the same directory as `Ouray_County_Buildings.shp`.*\n",
+    "*The resulting shapefile was saved to `buildings_rs_WKID26913.shp` where 'rs' denotes 'rubber sheet' transformation of the original footprint layer. Original footprints are saved in the same directory as `Ouray_County_Buildings.shp` and geopackage as `buildings_WKID26913.gpkg`.*\n",
     "\n",
-    "### Import geometries and run HIZ script\n",
+    "**TO DO**: A cool thing here to validate and display the results of this transformation for my thesis would be to choose 16 random buildings, buffer 100m square around them, and set that to the extent of screenshots/maps of three layers: z-entropy, pre-rubbersheet footprints, post-rubbersheet footprints. This will provide justification for the area that I buffered around the buildings to make sure that I am not getting the building in the HIZ and raster analysis.\n",
     "\n",
-    "**TO DO**: I have to re-do this rubber sheeting and make sure to save the result as its own shapefile"
+    "### Import geometries and run HIZ script"
    ]
   },
   {
