--- a/workflows/hiz/ouray_hiz.ipynb
+++ b/workflows/hiz/ouray_hiz.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "*The resulting shapefile was saved to `buildings_rs_WKID26913.shp` where 'rs' denotes 'rubber sheet' transformation of the original footprint layer. Original footprints are saved in the same directory as `Ouray_County_Buildings.shp` and geopackage as `buildings_WKID26913.gpkg`.*\n",
     "\n",
-    "**TO DO**: A cool thing here to validate and display the results of this transformation for my thesis would be to choose 16 random buildings, buffer 100m square around them, and set that to the extent of screenshots/maps of three layers: z-entropy, pre-rubbersheet footprints, post-rubbersheet footprints. This will provide justification for the area that I buffered around the buildings to make sure that I am not getting the building in the HIZ and raster analysis.\n",
+    "*In order to display my results, I randomized the building footprints and selected 9 random buildings which I plotted in an ArcGIS Pro layout with a 100m square buffer around the centroid. The maps in the layout show the pre-rubbersheet and post-rubbersheet building footprints on top of the Z-entropy LiDAR raster. This shows that the building footprints are well-aligned with the LiDAR rasters in order to ensure that the structures are not being considered in the LiDAR analysis.*\n",
     "\n",
     "### Import geometries and run HIZ script"
    ]
@@ -94,7 +94,7 @@
     "import geopandas as gpd\n",
     "\n",
     "# Import building footprints\n",
-    "footprints = gpd.read_file(os.path.join(mbf, 'Ouray_County_Buildings.shp'))"
+    "mbf = gpd.read_file(os.path.join(geoms, 'buildings_rs_WKID26913.shp'))"
    ]
   },
   {
@@ -117,10 +117,10 @@
     }
    ],
    "source": [
-    "from utils.HIZ import get_hiz\n",
+    "from utils.HIZ import simple_hiz\n",
     "\n",
     "# Create defensible space zones around all building footprints\n",
-    "hiz = get_hiz(footprints)\n",
+    "hiz = simple_hiz(mbf)\n",
     "hiz.head() # Preview data"
    ]
   },
@@ -729,7 +729,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "parcel",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -743,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
