updated get_hiz section

--- a/workflows/hiz/ouray_hiz.ipynb
+++ b/workflows/hiz/ouray_hiz.ipynb
@@ -81,7 +81,8 @@
     "\n",
     "*In order to display my results, I randomized the building footprints and selected 9 random buildings which I plotted in an ArcGIS Pro layout with a 100m square buffer around the centroid. The maps in the layout show the pre-rubbersheet and post-rubbersheet building footprints on top of the Z-entropy LiDAR raster. This shows that the building footprints are well-aligned with the LiDAR rasters in order to ensure that the structures are not being considered in the LiDAR analysis.*\n",
     "\n",
-    "### Import geometries and run HIZ script"
+    "### Import geometries and run HIZ script\n",
+    "The function `simple_hiz` from `utils.HIZ` in this repo creates a single defensible space zone around each building footprint. Looking at the randomly selected buildings, 3m is a sufficient buffer. I will put this buffer in the parameters and say that the outer edge will be that buffer + 30m, so the outer edge will be 33m from the building footprint. "
    ]
   },
   {
@@ -119,63 +120,21 @@
    "source": [
     "from utils.HIZ import simple_hiz\n",
     "\n",
-    "# Create defensible space zones around all building footprints\n",
+    "# Create defensible space zone around all building footprints, saving as its own gdf\n",
     "hiz = simple_hiz(mbf)\n",
     "hiz.head() # Preview data"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "dbd62c1f",
-   "metadata": {},
-   "source": [
-    "Now that we have created the HIZ boundaries around each building footprints, we need to save each one as its own geopackage for analysis. This could also be a shapefile, but a geopackage is more modern and generally preferred in 2025, so we'll stick with that.\n",
-    "\n",
-    "Because of the difference in alignment between buildings in the LiDAR data and the outlines provided by Microsoft Building Footprints, we're actually going to use this first buffer as an analog for the building itself. This will help avoid incuding the building pixels from the raster in the analysis.\n",
-    "\n",
-    "Below, we save each geometry column as its own geopackage, then we will restart the kernel to save memory and re-import the individual files.\n",
-    "\n",
-    "**TO DO**: If I am using buffer_z1 as the actual footprint, then I'm going to want to rename these to keep everything straight."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be89ebb3",
+   "id": "b7097a42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save each as its own geopackage\n",
-    "\n",
-    "# In order to save a shapefile of HIZs, each geometry column needs to be saved as a separate geopackage\n",
-    "# Make sure each file contains one geometry column, and also 'FID' and \"County'.\n",
-    "geom_cols = ['geometry', 'buffer_z1', 'buffer_z2', 'buffer_z3']\n",
-    "non_geom_cols = ['FID', 'County']\n",
-    "\n",
-    "# Iterate and save each as a separate Shapefile\n",
-    "for geom_col in geom_cols:\n",
-    "    # Create a temporary GeoDataFrame with only the current geometry column and non-geometry columns\n",
-    "    temp_gdf = hiz[non_geom_cols + [geom_col]].copy()\n",
-    "    temp_gdf.set_geometry(geom_col, inplace=True)  # Loop through columns, setting each as the geometry column\n",
-    "    \n",
-    "    # Save to Shapefile\n",
-    "    temp_gdf.to_file(f'E:\\_PROJECTS\\Ouray_ParcelRisk\\data\\hiz_geoms\\hiz_{geom_col}.gpkg', driver='GPKG')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2917963e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load HIZ geoms into environment\n",
-    "\n",
-    "import geopandas as gpd\n",
-    "\n",
-    "z1 = gpd.read_file(\"hiz_buffer_z1.gpkg\")\n",
-    "z2 = gpd.read_file(\"hiz_buffer_z2.gpkg\")\n",
-    "z3 = gpd.read_file(\"hiz_buffer_z3.gpkg\")"
+    "# Save to file\n",
+    "hiz.to_file(os.path.join(geoms, 'hiz_WKID26913.gpkg'), driver='GPKG', index=False)\n",
+    "print('hiz geom saved to file!')"
    ]
   },
   {
@@ -205,90 +164,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdbc882c",
-   "metadata": {},
-   "source": [
-    "**TO DO**: Does `counts_df` have geometries? Might need to add the extra step of appending that info to the footprint gdf. I think I ran this function in Gunnison so I should go look at those notebooks. \n",
-    "\n",
-    "## Step 3: Attributing WUI type to each home\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0d640ad0",
-   "metadata": {},
-   "source": [
-    "### Get WUI raster values per home\n",
-    "\n",
-    "I created a SILVIS WUI raster in `raster_prep.ipynb`, located in this repository. Now we will import the raster to the workspace as well as the building footprints. Then we're going to find the value of the raster at the centriod of each home. Those values will be appended to the HIZ geodataframe.\n",
-    "\n",
-    "Note that I will import the raster that is not clipped to the analysis area. This is because the AA does not encompass all of the building footprints. We won't be able to get LiDAR data for the homes outside the AA, but at least we can append the WUI info."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "306c2b5d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import data\n",
-    "from utils.raster import read_raster\n",
-    "import geopandas as gpd\n",
-    "\n",
-    "wui = read_raster('path.tif', layer=1)\n",
-    "homes = gpd.read_file('path.gpkg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b283c6f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Write a function to do get the centriod of each geometry and get the raster value at the centriod\n",
-    "import rasterio as rio\n",
-    "import numpy as np\n",
-    "\n",
-    "with rio.open('path.tif') as src:\n",
-    "    # Extract geometry centroids from homes\n",
-    "    centroids = homes.geometry.centroid\n",
-    "    # Convert centroids to xy coords and store in list\n",
-    "    points = [(geom.x, geom.y) for geom in centroids]\n",
-    "    # Sample raster values at centroids\n",
-    "    wui_values = [val[0] for val in src.sample(points)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cec3c091",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Append values to gdf\n",
-    "homes['WUI'] = wui_values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cea1b1ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save gdf to file\n",
-    "homes.to_file('path.gpkg', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "dff66adf",
    "metadata": {},
    "source": [
-    "## Step 4: Get canopy cover info for each HIZ\n",
+    "## Step 3: Get canopy cover info for each HIZ\n",
     "---\n",
     "\n",
     "### Read in LiDAR-derived rasters\n",
