added code for structure density and canopy cover

--- a/workflows/hiz/ouray_hiz.ipynb
+++ b/workflows/hiz/ouray_hiz.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Author: **Bryce A Young** (git bryceayoung) | \n",
     "Created: **2024-12-05** | \n",
-    "Modified: **2025-02-06**\n",
+    "Modified: **2025-02-11**\n",
     "\n",
     "In this notebook, we analyze fuel distributions within the defensible space of every building in Ouray County.\n",
     "\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1f366a42",
    "metadata": {},
    "outputs": [
@@ -60,6 +60,8 @@
     "geoms = os.path.join(data, 'county_geoms')\n",
     "# Folder containing LiDAR-derived rasters\n",
     "rasters = os.path.join(data, 'tiffs_from_las')\n",
+    "# Scratch folder\n",
+    "scratch = os.path.join(data, '_temp')\n",
     "\n",
     "# Ensure correct working directory\n",
     "os.getcwd()"
@@ -82,7 +84,9 @@
     "*In order to display my results, I randomized the building footprints and selected 9 random buildings which I plotted in an ArcGIS Pro layout with a 100m square buffer around the centroid. The maps in the layout show the pre-rubbersheet and post-rubbersheet building footprints on top of the Z-entropy LiDAR raster. This shows that the building footprints are well-aligned with the LiDAR rasters in order to ensure that the structures are not being considered in the LiDAR analysis.*\n",
     "\n",
     "### Import geometries and run HIZ script\n",
-    "The function `simple_hiz` from `utils.HIZ` in this repo creates a single defensible space zone around each building footprint. Looking at the randomly selected buildings, 3m is a sufficient buffer. I will put this buffer in the parameters and say that the outer edge will be that buffer + 30m, so the outer edge will be 33m from the building footprint. "
+    "The function `simple_hiz` from `utils.HIZ` in this repo creates a single defensible space zone around each building footprint. Looking at the randomly selected buildings, 3m is a sufficient buffer. I will put this buffer in the parameters and say that the outer edge will be that buffer + 30m, so the outer edge will be 33m from the building footprint. \n",
+    "\n",
+    "30m is chosen because of the NFPA and Cohen definitions of defensible space that are supported by post fire assessments, such as the Lahaina post-fire investigation (Hedayati et al. 2024)."
    ]
   },
   {
@@ -142,10 +146,10 @@
    "id": "11f1c559",
    "metadata": {},
    "source": [
-    "## Step 2: Count the Number of Adjacent Structures\n",
+    "## Step 2: Structure Density\n",
     "---\n",
     "\n",
-    "In order to obtain a proxy for structure density, we are going to count the number of adjacent structures in the vicinity of each home. We will append these counts to the geopackages."
+    "In order to obtain a proxy for structure density, we are going to count the number of adjacent structures in the vicinity of each home. We will also compute distance to nearest structure. We will append these counts to the HIZ geopackage."
    ]
   },
   {
@@ -155,11 +159,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.HIZ import structures_per_zone\n",
+    "# Count number of structures within defensible space\n",
+    "from utils.HIZ import structures_in_hiz\n",
     "\n",
-    "buffer_cols = ['buffer_z1', 'buffer_z2', 'buffer_z3']  # Define your buffer zone columns\n",
-    "counts_df = structures_per_zone(gdf, 'footprints', buffer_cols)\n",
+    "counts_df = structures_in_hiz(mbf, hiz)\n",
     "counts_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37a10070",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save df to csv in scratch folder\n",
+    "counts_df.to_csv(os.path.join(scratch, 'structure_count.csv'), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2750e7c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute minimum structure separation distance per structure\n",
+    "from utils.HIZ import min_ssd\n",
+    "\n",
+    "mbf = min_ssd(mbf)\n",
+    "mbf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8afd182f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save mbf to file in scratch folder\n",
+    "mbf.to_file(os.path.join(scratch, 'mbf_wui_ssd.gpkg'), driver='GPKG', index=False)"
    ]
   },
   {
@@ -177,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "60957165",
    "metadata": {},
    "outputs": [
@@ -212,9 +252,8 @@
     "\n",
     "# Setup environment\n",
     "# ----\n",
-    "# Path to all las-derived rasters\n",
-    "tiffs_from_las = r\"E:/_PROJECTS/Ouray_ParcelRisk/data/tiffs_from_las\"\n",
-    "# County, municipality etc. where the rasters cover\n",
+    "# File naming conventions, starting with aoi (a county, community, etc.) and ending with spatial reference\n",
+    "wkid = 'WKID26913'\n",
     "aoi = 'ouray'\n",
     "# ----\n",
     "\n",
@@ -223,54 +262,30 @@
     "lidar_raster_profiles = []\n",
     "\n",
     "# Canopy cover 0-2m\n",
-    "cc0_2, cc0_2_profile = read_raster(os.path.join(tiffs_from_las, '{0}_cc0_2m.tif'.format(aoi)), layer=1, profile=True)\n",
+    "cc0_2, cc0_2_profile = read_raster(os.path.join(rasters, f'{aoi}_cc0_2m_{wkid}.tif'), layer=1, profile=True)\n",
     "lidar_rasters.append(cc0_2)\n",
     "lidar_raster_profiles.append(cc0_2_profile)\n",
     "\n",
     "# Canopy cover 2-4m\n",
-    "cc2_4, cc2_4_profile = read_raster(os.path.join(tiffs_from_las, '{0}_cc2_4m.tif'.format(aoi)), layer=1, profile=True)\n",
+    "cc2_4, cc2_4_profile = read_raster(os.path.join(rasters, f'{aoi}_cc2_4m_{wkid}.tif'), layer=1, profile=True)\n",
     "lidar_rasters.append(cc2_4)\n",
     "lidar_raster_profiles.append(cc2_4_profile)\n",
     "\n",
     "# Canopy cover 4-8m\n",
-    "cc4_8, cc4_8_profile = read_raster(os.path.join(tiffs_from_las, '{0}_cc4_8m.tif'.format(aoi)), layer=1, profile=True)\n",
+    "cc4_8, cc4_8_profile = read_raster(os.path.join(rasters, f'{aoi}_cc4_8m_{wkid}.tif'), layer=1, profile=True)\n",
     "lidar_rasters.append(cc4_8)\n",
     "lidar_raster_profiles.append(cc4_8_profile)\n",
     "\n",
     "# Canopy cover 8-40m\n",
-    "cc8_40, cc8_40_profile = read_raster(os.path.join(tiffs_from_las, '{0}_cc8_40m.tif'.format(aoi)), layer=1, profile=True)\n",
+    "cc8_40, cc8_40_profile = read_raster(os.path.join(rasters, f'{aoi}_cc8_40m_{wkid}.tif'), layer=1, profile=True)\n",
     "lidar_rasters.append(cc8_40)\n",
     "lidar_raster_profiles.append(cc8_40_profile)\n",
-    "\n",
-    "# Canopy height model\n",
-    "chm, chm_profile = read_raster(os.path.join(tiffs_from_las, '{0}_chm.tif'.format(aoi)), layer=1, profile=True)\n",
-    "lidar_rasters.append(chm)\n",
-    "lidar_raster_profiles.append(chm_profile)\n",
-    "\n",
-    "# Ladder fuels\n",
-    "ladder, ladder_profile = read_raster(os.path.join(tiffs_from_las, '{0}_ladderfuels.tif'.format(aoi)), layer=1, profile=True)\n",
-    "lidar_rasters.append(ladder)\n",
-    "lidar_raster_profiles.append(ladder_profile)\n",
-    "\n",
-    "# Point density\n",
-    "density, density_profile = read_raster(os.path.join(tiffs_from_las, '{0}_pointDensity.tif'.format(aoi)), layer=1, profile=True)\n",
-    "lidar_rasters.append(density)\n",
-    "lidar_raster_profiles.append(density_profile)\n",
-    "\n",
-    "# Z-Entropy\n",
-    "zentropy, zentropy_profile = read_raster(os.path.join(tiffs_from_las, '{0}_zentropy.tif'.format(aoi)), layer=1, profile=True)\n",
-    "lidar_rasters.append(zentropy)\n",
-    "lidar_raster_profiles.append(zentropy_profile)\n",
     "\n",
     "# Print metadata for quality inspection\n",
     "print('0-2m: ', cc0_2_profile)\n",
     "print('2-4m: ', cc2_4_profile)\n",
     "print('4-8m: ', cc4_8_profile)\n",
-    "print('8+m: ', cc8_40_profile)\n",
-    "print('chm: ', chm_profile)\n",
-    "print('ladder: ', ladder_profile)\n",
-    "print('density: ', density_profile)\n",
-    "print('zentropy: ', zentropy_profile)"
+    "print('8+m: ', cc8_40_profile)"
    ]
   },
   {
@@ -287,11 +302,9 @@
     "Our workflow for this calculation - written in plain English - is as follows:\n",
     "1. **Mask raster with geometries**: Recall that each home ignition zone gdf is a geoseries of Shapely geometries. We need to iterate through **each** of these **XX** objects and use them to mask our raster, object by object.\n",
     "2. **Calculate average raster values within each HIZ**: once the mask is applied to only include a single building buffer, we'll take the average of all the pixels in the area. \n",
-    "3. **Store respective canopy cover value per HIZ as a new column in each HIZ dataframe:** The average values will be stored as columns and each value will correspond to the geometry in the same row.\n",
+    "3. **Store respective canopy cover value per HIZ as a new column in the HIZ dataframe:** The average values will be stored as columns and each value will correspond to the geometry in the same row.\n",
     "\n",
-    "**TO DO:** decide the best way to organize these. I'm thinking column titles will be 'ccvalue_hiz' and will be appended to the individual HIZ shapefiles rather than the grandfather gdf.\n",
-    "\n",
-    "THIS IS IN `ndvi_hiz.ipynb`."
+    "**TO DO:** decide the best way to organize these. I'm thinking column titles will be 'ccvalue_hiz' and will be appended to the individual HIZ shapefiles rather than the grandfather gdf."
    ]
   },
   {
@@ -301,17 +314,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code for analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf3d669f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate average raster value per HIZ\n",
+    "# Read in rasters\n",
+    "# Mask rasters with hiz geom, one at a time, so the new scratch raster is the one for only the defensible space\n",
+    "# Compute average (nanmean) of each scratch raster\n",
     "def calculate_avg(arr):\n",
     "    \n",
     "    # Count non-NaN values in the array\n",
@@ -321,7 +326,11 @@
     "    # Calculate the average (handle case when non_nan_count is 0 to avoid division by zero)\n",
     "    avg = non_nan_sum / non_nan_count if non_nan_count > 0 else np.nan\n",
     "\n",
-    "    return avg"
+    "    return avg\n",
+    "# For each scratch raster, column should be named dynamically\n",
+    "cc_rnames = ['cc0_2m', 'cc_2_4m', 'cc4_8m', 'cc8_40m']\n",
+    "col_name = f'mean_{rname}'\n",
+    "\n"
    ]
   },
   {
