--- a/workflows/hiz/ouray_hiz.ipynb
+++ b/workflows/hiz/ouray_hiz.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1f366a42",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
        "'D:\\\\_PROJECTS\\\\P001_OurayParcel\\\\ouray'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,34 +91,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "53841908-5925-4775-99ea-c55c5a8df894",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>County</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ouray County</td>\n",
+       "      <td>POLYGON ((233065.876 4241049.368, 233062.927 4...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ouray County</td>\n",
+       "      <td>POLYGON ((242799.828 4243540.283, 242798.994 4...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ouray County</td>\n",
+       "      <td>POLYGON ((251221.424 4245433.145, 251222.638 4...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ouray County</td>\n",
+       "      <td>POLYGON ((244094.335 4241435.666, 244103.748 4...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ouray County</td>\n",
+       "      <td>POLYGON ((254081.763 4242776.159, 254083.688 4...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         County                                           geometry\n",
+       "0  Ouray County  POLYGON ((233065.876 4241049.368, 233062.927 4...\n",
+       "1  Ouray County  POLYGON ((242799.828 4243540.283, 242798.994 4...\n",
+       "2  Ouray County  POLYGON ((251221.424 4245433.145, 251222.638 4...\n",
+       "3  Ouray County  POLYGON ((244094.335 4241435.666, 244103.748 4...\n",
+       "4  Ouray County  POLYGON ((254081.763 4242776.159, 254083.688 4..."
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import geopandas as gpd\n",
     "\n",
     "# Import building footprints\n",
-    "mbf = gpd.read_file(os.path.join(geoms, 'buildings_rs_WKID26913.shp'))"
+    "mbf = gpd.read_file(os.path.join(geoms, 'buildings_rs_WKID26913.shp'))\n",
+    "mbf.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "997c01c3-9a1f-45ed-b610-7feba37d730e",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'e:\\\\_PROJECTS\\\\Ouray_ParcelRisk\\\\ouray\\\\workflows'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "simple_hiz() missing 1 required positional argument: 'id_column'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mHIZ\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m simple_hiz\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Create defensible space zone around all building footprints, saving as its own gdf\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m hiz \u001b[38;5;241m=\u001b[39m \u001b[43msimple_hiz\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmbf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m hiz\u001b[38;5;241m.\u001b[39mhead() \u001b[38;5;66;03m# Preview data\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: simple_hiz() missing 1 required positional argument: 'id_column'"
+     ]
     }
    ],
    "source": [
@@ -617,7 +688,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "parcel",
    "language": "python",
    "name": "python3"
   },
@@ -631,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
