completed hiz workflow

--- a/workflows/hiz/ouray_hiz.ipynb
+++ b/workflows/hiz/ouray_hiz.ipynb
@@ -5,13 +5,13 @@
    "id": "ec583c1c-12ee-4fbb-951e-f0475ae51eac",
    "metadata": {},
    "source": [
-    "# Ouray Defensible Space Analysis\n",
+    "# Ouray Defensible Space - Create and Populate\n",
     "\n",
     "Author: **Bryce A Young** (git bryceayoung) | \n",
     "Created: **2024-12-05** | \n",
-    "Modified: **2025-02-14**\n",
+    "Modified: **2025-02-15**\n",
     "\n",
-    "In this notebook, we analyze fuel distributions within the defensible space of every building in Ouray County.\n",
+    "In this notebook, we detect fuel distributions within the defensible space of every building in Ouray County. We build the defensible space dataset here, which contains HIZ polygons, LiDAR metrics, number of adjacent structures, distance to nearest structure. \n",
     "\n",
     "Documents for cleaning and preparing raw data for the analysis are located in this repo under `workflows/data_prep`.\n",
     "\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "1f366a42",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
        "'D:\\\\_PROJECTS\\\\P001_OurayParcel\\\\ouray'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,25 +1423,9 @@
    "id": "0c661870",
    "metadata": {},
    "source": [
-    "## Step 4: Analysis of defensible space attributes\n",
+    "## Analysis of defensible space attributes\n",
     "---\n",
-    "Next we are going to describe our dataset by looking at the distributions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83fe8d41",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "912afde3",
-   "metadata": {},
-   "source": [
-    "The next notebook in this process is going to be `data_prep/parcel_joins.ipynb`. In that notebook, we will take the scratch gdf we just created and do a spatial join that will assign each row to a parcel in the Ouray tax assessor records."
+    "Next we are going to describe our dataset by looking at the distributions. This will be conducted under `workflows/analysis/hiz_analysis.ipynb`."
    ]
   }
  ],
