--- a/workflows/analysis/tax_analysis.ipynb
+++ b/workflows/analysis/tax_analysis.ipynb
@@ -732,7 +732,7 @@
    "source": [
     "Okay, so we can see that there is a mismatch of the number of homes that have tax assessor information and the number of homes that are in the building footprints database. Namely, there are quite a few homes missing from the assessor database. Additionally, there are 9 mobile homes in the mbf dataframe and 139 in the tax assessor dataframe. \n",
     "\n",
-    "When I cleaned the assessor database, I believe I removed homes where there were multiple homes per parcel number. If I go back and correct this, then I should have a better dataset to work with."
+    "When I cleaned the assessor database, I believe I removed homes where there were multiple homes per parcel number. Looks like I may also have removed commercial structures. If I go back and correct this, then I should have a better dataset to work with."
    ]
   }
  ],
