--- a/workflows/analysis/risk_data_analysis.ipynb
+++ b/workflows/analysis/risk_data_analysis.ipynb
@@ -4356,10 +4356,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Roof Cover\\n(RCVR)  Roofing_Material\n",
+      "ASPHALT             0                   420\n",
+      "                    301                  13\n",
+      "METAL               0                   739\n",
+      "                    301                  47\n",
+      "                    300                   5\n",
+      "                    200                   1\n",
+      "OTHER               0                    36\n",
+      "                    301                   2\n",
+      "TILE                0                    73\n",
+      "                    301                   3\n",
+      "                    300                   1\n",
+      "WOOD                0                    32\n",
+      "                    301                  19\n",
+      "                    300                   9\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What are the total observations of each WRWC roof cover class by tax roof cover classes?\n",
+    "# Group by 'Roof Cover\\n(RCVR)' and count occurrences of 'Roofing_Material' within each group\n",
+    "roof_comparison = gdf.groupby('Roof Cover\\n(RCVR)')['Roofing_Material'].value_counts()\n",
+    "\n",
+    "# Print the result\n",
+    "print(roof_comparison)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that on average wood roofs are scored higher. However, there are cases in which wood roofs were scored low and others were scored high."
+    "We can see that on average wood roofs are scored higher. However, there are cases in which wood roofs were scored low and others were scored high. Looks like, of all the WOOD roofs according to the tax assessor database, 28 of them were given scores of 300 or 301 whereas 32 of them (more) were given scores of 0. Interesting. It could be that this assessor database is outdated or it could be because of human error in the rapid assessments. Hard saying not knowing."
    ]
   },
   {
