--- a/workflows/analysis/risk_pred.ipynb
+++ b/workflows/analysis/risk_pred.ipynb
@@ -10,18 +10,24 @@
     "**Institution**: University of Montana, National Center for Landscape Fire Analysis\n",
     "\n",
     "**Created**: 2025-02-27  \n",
-    "**Modified**: 2025-02-27\n",
+    "**Modified**: 2025-03-03\n",
     "\n",
     "### Overview  \n",
     "In previous notebooks (located in this repository), I prepared data (`data_prep/`), attributed that data to homes and home ignition zones (`ouray_hiz.ipynb`), and performed extensive analysis on features from tax assessor data (`tax_analysis.ipynb`), remotely-sensed data (`hiz_analysis.ipynb`, `wui_analysis.ipynb`), and rapid wildfire risk assessment data (`risk_data_analysis.ipynb`).\n",
     "\n",
-    "In this notebook, I explore different machine learning models for using the features I attributed to homes to predict RWRA scores. \n",
+    "In this notebook, I do the following:\n",
     "\n",
     "This notebook is organized by the following workflow:\n",
     "1. Feature selection\n",
-    "2. Risk score prediction with Random Forest\n",
-    "3. Model validation\n",
-    "4. Explore different features and machine learning models\n",
+    "2. Risk score prediction with Random Forest regressor\n",
+    "3. Risk score prediction with Random Forest classifier\n",
+    "4. Model evaluation\n",
+    "5. Further analysis of risk features and scores/classifications\n",
+    "6. Light data cleaning and exporting of new CSV and GPKG files/layers. \n",
+    "\n",
+    "### Notes\n",
+    "The most recent dataframe at the end of this notebook is this one: ```df.to_csv(os.path.join(scratch, 'MAIN_20250303.csv'), index=False)```  \n",
+    "The most recent geodataframe is this one: ```gdf2.to_file(os.path.join(out, 'feat_risk_refact.gpkg'), layer='risk_reclass', driver='GPKG', index=False)```\n",
     "\n",
     "## Step 1: Feature Selection\n",
     "---"
